# FinancialETL

./: .gitignore  1  README.md  allfiles.txt  diagram.py  pyproject.toml
FinancialETL/: LICENSE  Makefile  README.md  pyproject.toml
FinancialETL/docs/: mkdocs.yml
FinancialETL/docs/docs/: index.md
FinancialETL/finacialetl/: __init__.py  dataset.py  features.py  plots.py
FinancialETL/finacialetl/modeling/: predict.py  train.py
aux script/: api_test.py
financialetl/: LICENSE  Makefile  README.md  pyproject.toml
poetry/: pyvenv.cfg
terraform_infra/: main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
terraform_infra/modules/ec2/: main.tf  outputs.tf  variables.tf
terraform_infra/modules/s3/: main.tf  variables.tf
