[project]
name = "financialetl"
version = "0.1.0"
description = ""
authors = [
    {name = "haison12",email = "36688293+haison12@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "diagrams (>=0.24.4,<0.25.0)",
    "boto3 (>=1.37.11,<2.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "apache-airflow (>=2.10.5,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "moto (>=5.1.1,<6.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
