[tool.poetry]
name = "financialetl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
boto3 = "^1.37.16"
pyspark = "^3.5.5"
apache-airflow = "^2.10.5"
requests = "^2.32.3"
numpy = "^2.2.4"
pandas = "^2.2.3"
moto = "^5.1.1"
pytest = "^8.3.5"
pyyaml = "^6.0.2"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
